トップページの作成

--- a/resources/sass/_common.scss
+++ b/resources/sass/_common.scss
@@ -74,3 +74,8 @@ ul {
     background-position: 0 0, 16px 16px;
     background-color: #371a1c;
 }
+.content {
+  display: block;
+  flex: 1 0 auto;
+  padding: 40px 0;
+}
