--- a/public/css/app.css
+++ b/public/css/app.css
@@ -228,3 +228,9 @@ ul {
   background-position: 0 0, 16px 16px;
   background-color: #371a1c;
 }
+
+.content {
+  display: block;
+  flex: 1 0 auto;
+  padding: 40px 0;
+}
