productionモードでコンパイル

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,262 +1,1 @@
-@charset "UTF-8";
-/* 
-html5doctor.com Reset Stylesheet
-v1.6.1
-Last Updated: 2010-09-17
-Author: Richard Clark - http://richclarkdesign.com 
-Twitter: @rich_clark
-*/
-html, body, div, span, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-abbr, address, cite, code,
-del, dfn, em, img, ins, kbd, q, samp,
-small, strong, sub, sup, var,
-b, i,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
-}
-
-body {
-  line-height: 1;
-}
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-nav ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-a {
-  margin: 0;
-  padding: 0;
-  font-size: 100%;
-  vertical-align: baseline;
-  background: transparent;
-}
-
-/* change colours to suit your needs */
-ins {
-  background-color: #ff9;
-  color: #000;
-  text-decoration: none;
-}
-
-/* change colours to suit your needs */
-mark {
-  background-color: #ff9;
-  color: #000;
-  font-style: italic;
-  font-weight: bold;
-}
-
-del {
-  text-decoration: line-through;
-}
-
-abbr[title], dfn[title] {
-  border-bottom: 1px dotted;
-  cursor: help;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* change border colour to suit your needs */
-hr {
-  display: block;
-  height: 1px;
-  border: 0;
-  border-top: 1px solid #cccccc;
-  margin: 1em 0;
-  padding: 0;
-}
-
-input, select {
-  vertical-align: middle;
-}
-
-/********************************/
-/*           定数定義           */
-/********************************/
-/********************************/
-/*        全体の基本定義        */
-/********************************/
-.mt5 {
-  margin-top: 5px;
-}
-
-.mt10 {
-  margin-top: 10px;
-}
-
-.mt20 {
-  margin-top: 20px;
-}
-
-.mt30 {
-  margin-top: 30px;
-}
-
-.mt40 {
-  margin-top: 40px;
-}
-
-.mt50 {
-  margin-top: 50px;
-}
-
-.mt60 {
-  margin-top: 60px;
-}
-
-.mb5 {
-  margin-bottom: 5px;
-}
-
-.mb10 {
-  margin-bottom: 10px;
-}
-
-.mb20 {
-  margin-bottom: 20px;
-}
-
-.mb30 {
-  margin-bottom: 30px;
-}
-
-.mb40 {
-  margin-bottom: 40px;
-}
-
-.mb50 {
-  margin-bottom: 50px;
-}
-
-.mb60 {
-  margin-bottom: 60px;
-}
-
-html {
-  height: 100%;
-  overflow-y: scroll;
-}
-
-body {
-  height: 100%;
-  color: #222;
-  background-color: #fff6e3;
-}
-
-#app, #app-wrap {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-img {
-  width: 100%;
-}
-
-a {
-  text-decoration: none;
-}
-
-ul {
-  list-style-type: none;
-}
-
-.pc-only {
-  display: none;
-}
-@media screen and (min-width: 768px) {
-  .pc-only {
-    display: block !important;
-  }
-}
-
-.sp-only {
-  display: block;
-}
-@media screen and (min-width: 768px) {
-  .sp-only {
-    display: none !important;
-  }
-}
-
-.image-link,
-.text-link {
-  transition: 0.2s;
-}
-.image-link:hover,
-.text-link:hover {
-  opacity: 0.75;
-}
-
-/********************************/
-/*     全体のサイトデザイン     */
-/********************************/
-.background-pattern {
-  background: linear-gradient(45deg, #231111 25%, transparent 25%, transparent 75%, #231111 75%), linear-gradient(45deg, #231111 25%, transparent 25%, transparent 75%, #231111 75%);
-  background-size: 32px 32px;
-  background-position: 0 0, 16px 16px;
-  background-color: #371a1c;
-}
-
-.content {
-  display: block;
-  flex: 1 0 auto;
-  padding: 40px 0;
-}
-
-.main-window__wrap {
-  box-sizing: border-box;
-  width: 94%;
-  margin: 0 auto;
-  padding: 10px;
-  background-color: #c7a695;
-  border: solid #533221;
-  border-width: 4px 1px;
-  box-shadow: 1px 2px 3px #533221;
-}
-@media screen and (min-width: 768px) {
-  .main-window__wrap {
-    width: 768px;
-  }
-}
-.main-window__inner {
-  padding: 25px 10px;
-  border-radius: 8px;
-  background-color: #ffffff;
-}
-@media screen and (min-width: 768px) {
-  .main-window__inner {
-    padding: 30px;
-  }
-}
+abbr,address,article,aside,audio,b,blockquote,body,canvas,caption,cite,code,dd,del,details,dfn,div,dl,dt,em,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,p,pre,q,samp,section,small,span,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,ul,var,video{background:transparent;border:0;font-size:100%;margin:0;outline:0;padding:0;vertical-align:baseline}body{line-height:1}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}a{background:transparent;font-size:100%;margin:0;padding:0;vertical-align:baseline}ins{text-decoration:none}ins,mark{background-color:#ff9;color:#000}mark{font-style:italic;font-weight:700}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{border:0;border-top:1px solid #ccc;display:block;height:1px;margin:1em 0;padding:0}input,select{vertical-align:middle}.mt5{margin-top:5px}.mt10{margin-top:10px}.mt20{margin-top:20px}.mt30{margin-top:30px}.mt40{margin-top:40px}.mt50{margin-top:50px}.mt60{margin-top:60px}.mb5{margin-bottom:5px}.mb10{margin-bottom:10px}.mb20{margin-bottom:20px}.mb30{margin-bottom:30px}.mb40{margin-bottom:40px}.mb50{margin-bottom:50px}.mb60{margin-bottom:60px}html{overflow-y:scroll}body,html{height:100%}body{background-color:#fff6e3;color:#222}#app,#app-wrap{display:flex;flex-direction:column;height:100%}img{width:100%}a{text-decoration:none}ul{list-style-type:none}.pc-only{display:none}@media screen and (min-width:768px){.pc-only{display:block!important}}.sp-only{display:block}@media screen and (min-width:768px){.sp-only{display:none!important}}.image-link,.text-link{transition:.2s}.image-link:hover,.text-link:hover{opacity:.75}.background-pattern{background:linear-gradient(45deg,#231111 25%,transparent 0,transparent 75%,#231111 0),linear-gradient(45deg,#231111 25%,transparent 0,transparent 75%,#231111 0);background-color:#371a1c;background-position:0 0,16px 16px;background-size:32px 32px}.content{display:block;flex:1 0 auto;padding:40px 0}.main-window__wrap{background-color:#c7a695;border:solid #533221;border-width:4px 1px;box-shadow:1px 2px 3px #533221;box-sizing:border-box;margin:0 auto;padding:10px;width:94%}@media screen and (min-width:768px){.main-window__wrap{width:768px}}.main-window__inner{background-color:#fff;border-radius:8px;padding:25px 10px}@media screen and (min-width:768px){.main-window__inner{padding:30px}}
