--- a/resources/sass/_common.scss
+++ b/resources/sass/_common.scss
@@ -26,6 +26,7 @@ body {
     height: 100%;
     color: #222;
     background-color: #fff6e3;
+    font-family: "Noto Sans JP", "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
 }
 #app, #app-wrap {
     height: 100%;
